--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 		/>
 		<!--  -->
 
-		<link rel="stylesheet" href="global.css" />
+		<link rel="stylesheet" href="../global.css" />
 		<link rel="stylesheet" href="mainmenu.css" />
 	</head>
 	<body>
@@ -24,7 +24,9 @@
 
 		<div class="title">
 			<h1>Sabotage</h1>
-			<p style="font-size: 11pt">Sabotage your friends >:) *or your enemies</p>
+			<p style="font-size: 11pt">
+				Sabotage your friends >:) *or your enemies
+			</p>
 		</div>
 
 		<div class="code-input">
