--- a/host/host.html
+++ b/host/host.html
@@ -20,15 +20,29 @@
 	<body>
 		<div class="center">
 			<h3>Join at sabotage.77z.dev</h3>
-			<h1>493839</h1>
+			<h1 id="iddisplay">LOADING...</h1>
 		</div>
 
-		<div class="playerlist"></div>
+		<div class="playerlist">
+			<h3>Vince</h3>
+		</div>
 		<div class="playButtonContainer">
+			<textarea
+				id="setinput"
+				cols="30"
+				rows="10"
+				placeholder="PASTE SET FROM QUIZLET HERE!"
+			></textarea>
 			<button id="playbtn">
 				<img src="play_arrow_white_48dp.svg" alt="Play Button" />
 				<p>Play!</p>
 			</button>
+			<span class="red">
+				* This game doesn't have any music yet so you might wanna put
+				some on
+			</span>
 		</div>
+
+		<script src="host.js"></script>
 	</body>
 </html>
